kubernetes/apps/games/palworld/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: palworld
spec:
  ports:
    - name: game
      protocol: UDP
      port: 8211
      targetPort: 8211
    - name: query
      protocol: UDP
      port: 27015
      targetPort: 27015
    - name: rcon
      protocol: TCP
      port: 25575
      targetPort: 25575
  selector:
    app.kubernetes.io/component: palworld-server
  type: LoadBalancer
  loadBalancerIP: 192.168.1.210
  externalTrafficPolicy: Local
